--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
     -o-border-radius: 15px;
     height: 70px;
     font-family: 'Cairo', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
 
 }
 .btnEng{
@@ -31,7 +33,8 @@
     -o-border-radius: 15px;
     height: 70px;
     font-family: 'Cairo', sans-serif;
-
+    font-weight: bold;
+    font-size: 16px;
 }
 .main-btn{
     margin-top: 200px;
