--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@500&family=Monoton&display=swap');
+body{
+    background-image: url("");
+}
 .one{
 
     display: flex;
