--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@500&family=Monoton&display=swap');
-body{
-    background-image: url("/img/822e5209-9f8e-4da7-8c93-5e73aad3c02f.jfif");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-clip: border-box;
-}
+
 .one{
 
     display: flex;
@@ -47,5 +42,5 @@ body{
 }
 .title{
     font-family: 'Cairo', sans-serif;
-
+    color: snow;
 }
